# dad-todo

./: .gitignore  DESIGN-TUI.md  DESIGN.md  README.md  package-lock.json  package.json
app/: index.html  package.json
app/src/: App.tsx  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  sidecar.rs  watcher.rs
app/src/components/: MorphBar.tsx  Setup.tsx  Studio.tsx  TaskCard.tsx  TaskList.tsx  Welcome.tsx
app/src/hooks/: useCategorize.ts  useTasks.ts
app/src/views/: BucketView.tsx  CalendarView.tsx  EisenhowerView.tsx  GtdView.tsx  KanbanView.tsx  MindMapView.tsx  PostItView.tsx  ProjectsView.tsx
sample-todos/: home.md  personal.md  quick-notes.todo  shopping.txt  work.md
sidecar/: categorizer.ts  index.ts  package.json  parser.ts
tui/: .gitignore  ADVERSARIAL_REVIEW.md  AUDIT-2.md  BUGS.md  DadTodoApp.tsx  README.md  app.test.ts  app.ts  categorizer.ts  chat.test.ts  chatCommands.test.ts  chatCommands.ts  config.ts  package.json  parser.test.ts  parser.ts  taskHelpers.test.ts  taskHelpers.ts  tsconfig.json  tui.ts  types.ts  watcher.ts
tui/components/: ChatPane.tsx  TabBar.tsx  TaskPane.tsx
