[package]
name = "dadtodo"
version = "0.1.0"
description = "A morphing todo app for Dad"
authors = ["chandrahas.aroori@gmail.com"]
edition = "2021"

[lib]
name = "dadtodo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync", "process", "io-util", "macros"] }
